[gd_scene load_steps=7 format=3 uid="uid://bhpg25aldy702"]

[ext_resource type="Script" path="res://Minigames/ValveGame.gd" id="1_n4vlg"]
[ext_resource type="Texture2D" uid="uid://bvxp1xgc5udf5" path="res://Assets/steam-valve-hi.png" id="2_jrucj"]
[ext_resource type="Texture2D" uid="uid://lejoajc15ea6" path="res://Assets/red_arrow_PNG1.png" id="3_88opv"]
[ext_resource type="Texture2D" uid="uid://cu24an2o03uub" path="res://Assets/PipePNG.png" id="4_ys1dj"]
[ext_resource type="Texture2D" uid="uid://0tik15ssrfpo" path="res://Assets/Circle.png" id="5_qmcx3"]

[sub_resource type="CanvasTexture" id="CanvasTexture_ois1y"]

[node name="Valve Minigame" type="Control"]
top_level = true
z_index = 1
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_n4vlg")

[node name="Background" type="TextureRect" parent="."]
modulate = Color(0, 0, 0, 1)
self_modulate = Color(0, 0, 0, 0.431373)
top_level = true
z_index = -1
layout_mode = 0
offset_left = -12.0
offset_top = -12.0
offset_right = 320.0
offset_bottom = 183.0
texture = SubResource("CanvasTexture_ois1y")

[node name="Valve1" type="Sprite2D" parent="." groups=["Valve1"]]
position = Vector2(58, 108)
scale = Vector2(0.1, 0.1)
texture = ExtResource("2_jrucj")

[node name="Valve2" type="Sprite2D" parent="." groups=["Valve2"]]
position = Vector2(159, 108)
scale = Vector2(0.1, 0.1)
texture = ExtResource("2_jrucj")

[node name="Valve3" type="Sprite2D" parent="." groups=["Valve3"]]
position = Vector2(259, 108)
scale = Vector2(0.1, 0.1)
texture = ExtResource("2_jrucj")

[node name="Arrow1" type="Sprite2D" parent="." groups=["Arrow1"]]
position = Vector2(58, 155)
rotation = 4.71239
scale = Vector2(0.01, 0.01)
texture = ExtResource("3_88opv")

[node name="Arrow2" type="Sprite2D" parent="." groups=["Arrow2"]]
visible = false
position = Vector2(160, 155)
rotation = 4.71239
scale = Vector2(0.01, 0.01)
texture = ExtResource("3_88opv")

[node name="Arrow3" type="Sprite2D" parent="." groups=["Arrow3"]]
visible = false
position = Vector2(259, 155)
rotation = 4.71239
scale = Vector2(0.01, 0.01)
texture = ExtResource("3_88opv")

[node name="Pipe1" type="Sprite2D" parent="."]
position = Vector2(55, 58)
rotation = 1.5708
scale = Vector2(0.05, 0.05)
texture = ExtResource("4_ys1dj")

[node name="Pipe2" type="Sprite2D" parent="."]
position = Vector2(158, 58)
rotation = 1.5708
scale = Vector2(0.05, 0.05)
texture = ExtResource("4_ys1dj")

[node name="Pipe3" type="Sprite2D" parent="."]
position = Vector2(258, 58)
rotation = 1.5708
scale = Vector2(0.05, 0.05)
texture = ExtResource("4_ys1dj")

[node name="Steam1" type="CPUParticles2D" parent="." groups=["Steam1"]]
show_behind_parent = true
z_index = 1
position = Vector2(58, 43)
amount = 12
lifetime = 0.4
texture = ExtResource("5_qmcx3")
gravity = Vector2(0, -650)
initial_velocity_min = 10.0
initial_velocity_max = 50.0
scale_amount_min = 0.0
scale_amount_max = 0.2
color = Color(0.392157, 0.392157, 0.392157, 1)

[node name="Steam2" type="CPUParticles2D" parent="." groups=["Steam2"]]
show_behind_parent = true
z_index = 1
position = Vector2(162, 43)
amount = 12
lifetime = 0.4
texture = ExtResource("5_qmcx3")
gravity = Vector2(0, -650)
initial_velocity_min = 10.0
initial_velocity_max = 50.0
scale_amount_min = 0.0
scale_amount_max = 0.2
color = Color(0.392157, 0.392157, 0.392157, 1)

[node name="Steam3" type="CPUParticles2D" parent="." groups=["Steam3"]]
show_behind_parent = true
z_index = 1
position = Vector2(263, 43)
amount = 12
lifetime = 0.4
texture = ExtResource("5_qmcx3")
gravity = Vector2(0, -650)
initial_velocity_min = 10.0
initial_velocity_max = 50.0
scale_amount_min = 0.0
scale_amount_max = 0.2
color = Color(0.392157, 0.392157, 0.392157, 1)
